# googlelogintool

./: .replit  GoogleTool.rar  Launch App.pyw  accounts.db  chrome_debug.bat  chrome_launcher.py  config.py  database.py  login_bot.py  main.py  pyproject.toml  replit.nix  requirements.txt  run.bat  setup.bat  setup_check.py  update_chrome_shortcut.ps1
attached_assets/: Pasted--00-07-06-Traceback-most-recent-call-last-File-D-My-Por_1779743239927.txt  Pasted--00-08-29-Launching-batch-login-flow-for-1-accounts-00-_1779743328299.txt
