[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "pillow>=12.2.0",
    "playwright>=1.60.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pyotp>=2.9.0",
    "pyperclip>=1.11.0",
]
